Add compiler & linker options to CMake configuration. Add option support for both MSVC & GNU compiler Introduce Release & Debug configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,46 @@ set_target_properties(IntegratorLib PROPERTIES
     CXX_STANDARD_REQUIRED YES
 )
 
+#===================================== Build Type =====================================
+# Set default build type to Release if not specified
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type (default Release)" FORCE)
+endif()
+
+# Optionally, add configuration-specific compile options
+target_compile_definitions(IntegratorLib PRIVATE 
+    $<$<CONFIG:Debug>:DEBUG_BUILD>
+    $<$<CONFIG:Release>:NDEBUG>
+)
+#=======================================================================================
+
+#=================================== Compile Options ===================================
+
+# Set compiler options and warnings for IntegratorLib
+target_compile_options(IntegratorLib PRIVATE
+    # Release options
+    $<$<CONFIG:Release>:
+        $<$<CXX_COMPILER_ID:MSVC>:/O2>  # Highest optimization#
+        $<$<CXX_COMPILER_ID:GNU>:-O3>   #
+    >
+    # Debug options
+    $<$<CONFIG:Debug>:
+        $<$<CXX_COMPILER_ID:MSVC>:/Od /Zi>  # No optimization, debug info
+        $<$<CXX_COMPILER_ID:GNU>:-O0 -g>    # No optimization, debug info
+    >
+    # Warnings (applied to all configs)
+    $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive->
+    $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>
+)
+
+# Set linker options for IntegratorLib
+target_link_options(IntegratorLib PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:/LTCG> #  Link Time Code Generation
+    $<$<CXX_COMPILER_ID:GNU>:-flto> # Link Time Optimization
+)
+
+#=======================================================================================
+
 #=================================================== Unit Tests =========================================================
 
 include(FetchContent)
